Retail Lending-Production/src/objects/Co_Applicant__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <inlineHelpText>Enter the address of co-applicant</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_company__c</fullName>
        <description>Enter the bank name</description>
        <inlineHelpText>Enter the name of the Bank&quot;Eg:Axis Bank&quot;.</inlineHelpText>
        <label>Banker company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banking_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banking With</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Co Applicants</relationshipLabel>
        <relationshipName>Co_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Banking_individual__c</fullName>
        <label>Banker Individual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_of_work__c</fullName>
        <label>City of  work</label>
        <picklist>
            <controllingField>Residency_Status__c</controllingField>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi&amp;NCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HongKong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuwait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saudi Arabia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co Applicant (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Co Applicants (Co Applicant For)</relationshipLabel>
        <relationshipName>Co_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_applicant_name_Exisiting_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co applicant name(Exisiting Lead)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Co Applicants (Co applicant name(Exisiting Lead))</relationshipLabel>
        <relationshipName>Co_Applicants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_applicant_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co applicant name(Exisiting contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Co Applicants (Co applicant name(Exisiting contact))</relationshipLabel>
        <relationshipName>Co_Applicants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coapplicant_From__c</fullName>
        <label>Coapplicant From</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Co Applicants (Company)</relationshipLabel>
        <relationshipName>Co_Applicants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_type__c</fullName>
        <label>Type of Company</label>
        <picklist>
            <controllingField>Employment__c</controllingField>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietorship.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietorship,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Ltd,</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Depriciation_co_y1__c</fullName>
        <label>Depriciation co y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depriciation_co_y2__c</fullName>
        <label>Depriciation  co y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depriciation_co_y3__c</fullName>
        <label>Depriciation co y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depriciation_y1__c</fullName>
        <inlineHelpText>Enter current year depreciation</inlineHelpText>
        <label>Depriciation y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depriciation_y2__c</fullName>
        <inlineHelpText>Enter previous year depreciation</inlineHelpText>
        <label>Depriciation y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depriciation_y3__c</fullName>
        <inlineHelpText>Enter depreciation for year before last</inlineHelpText>
        <label>Depriciation y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Enter the Email &quot;Eg:name@gmail.com&quot;</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <description>Choose type for  employment</description>
        <inlineHelpText>Choose the Type of Employment like&quot;Salaried,Salaried Professional,Self Employed Business&quot; etc.</inlineHelpText>
        <label>Type Of Employment</label>
        <picklist>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed Non Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Maker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Yr_1__c</fullName>
        <inlineHelpText>Enter the gross receipts/Turn over of the current year</inlineHelpText>
        <label>Gross Profit Yr 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Yr_2__c</fullName>
        <inlineHelpText>Enter the gross receipts/Turn over for the previous year</inlineHelpText>
        <label>Gross Profit Yr 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Yr_3__c</fullName>
        <inlineHelpText>Enter the gross receipts/Turn over for the year before last</inlineHelpText>
        <label>Gross Profit Yr 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_co_y1__c</fullName>
        <label>Gross Profit  co y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant Name (lead)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Co Applicants</relationshipLabel>
        <relationshipName>Co_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_of_Business_PNS__c</fullName>
        <inlineHelpText>Choose The type of Profession He/She Working&quot;Eg:Accountant,Consultant&quot;.</inlineHelpText>
        <label>Industry Type(Pns)</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food&amp;Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Requested_SAL__c</fullName>
        <inlineHelpText>Enter the amount for the loan requested Eg: Rs 400000.</inlineHelpText>
        <label>Loan Requested(SAL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Tenure_Requested__c</fullName>
        <description>Enter the reason for loan tenure request</description>
        <inlineHelpText>Enter period for loan tenure requested&quot;Eg:6 Months&quot;.</inlineHelpText>
        <label>Loan Tenure Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>loans__c</referenceTo>
        <relationshipLabel>Co Applicants</relationshipLabel>
        <relationshipName>Co_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Co Applicants</relationshipLabel>
        <relationshipName>Co_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Loan2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Loan2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Loan3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Loan3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_co_loan1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If having other loans Click Checked else Unchecked</description>
        <inlineHelpText>Choose whether he/she is having any other loans&quot;Eg:Yes/No&quot;.</inlineHelpText>
        <label>Other co loan1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_co_loan2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other co loan2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_co_loan3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Loan take are not for Private</description>
        <inlineHelpText>Choose whether he had taken any Self Loan&quot;Eg:Yes/No&quot;</inlineHelpText>
        <label>Other co loan3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_income__c</fullName>
        <label>Other income</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_loan1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enter if he has any other loans</description>
        <label>Other Loan1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_no__c</fullName>
        <inlineHelpText>Enter the phone number</inlineHelpText>
        <label>Phone no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prop_location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prop location</label>
        <referenceTo>Locations__c</referenceTo>
        <relationshipLabel>Co Applicants</relationshipLabel>
        <relationshipName>Co_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relation_ship__c</fullName>
        <inlineHelpText>Enter the Relationship with Applicant</inlineHelpText>
        <label>Relation ship</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residency_Status__c</fullName>
        <label>Residency Status</label>
        <picklist>
            <picklistValues>
                <fullName>Resident Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foriegn Nation of Indian Orgin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salary_gross__c</fullName>
        <label>salary gross</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Will_Join_Loan__c</fullName>
        <label>Will Co-apply</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dob__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gross_profit_co_y2__c</fullName>
        <label>Gross Profit co y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gross_profit_co_y3__c</fullName>
        <label>Gross Profit  co y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>itr_co_y1__c</fullName>
        <label>itr co y1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itr_co_y2__c</fullName>
        <inlineHelpText>Enter net profit of the previous year</inlineHelpText>
        <label>itr co y2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itr_co_y3__c</fullName>
        <inlineHelpText>Enter net profit of year before last</inlineHelpText>
        <label>itr co y3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itr_y1__c</fullName>
        <description>Enter the amount for IT Returns</description>
        <label>itr y1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itr_y2__c</fullName>
        <description>Enter the second year IT return filed.</description>
        <inlineHelpText>Enter  the Personal IT Return Filed for  2nd  year &quot;Eg:Rs 5000&quot;.</inlineHelpText>
        <label>itr y2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itr_y3__c</fullName>
        <description>Enter the Third Year IT return</description>
        <inlineHelpText>Enter  the Personal IT Return Filed for  3rd  year &quot;Eg:Rs 6000&quot;.</inlineHelpText>
        <label>itr y3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_loan_co_emi1__c</fullName>
        <inlineHelpText>Enter loan EMI for current Loan</inlineHelpText>
        <label>other loan co emi1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_co_emi2__c</fullName>
        <label>other loan co emi2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_co_emi3__c</fullName>
        <label>other loan co emi3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_co_os_term1__c</fullName>
        <label>other loan co os term1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_co_os_term2__c</fullName>
        <label>other loan co os term2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_co_os_term3__c</fullName>
        <label>other loan co os term3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_co_type1__c</fullName>
        <label>other loan co type1</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(TERM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(OD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>other_loan_co_type2__c</fullName>
        <label>other loan co type2</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(TERM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(OD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgaged Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>other_loan_co_type3__c</fullName>
        <label>other loan co type3</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(TERM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(OD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgaged Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>other_loan_due_term1__c</fullName>
        <label>other loan due term1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_loan_due_term2__c</fullName>
        <label>other loan due term2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_loan_due_term3__c</fullName>
        <label>other loan due term3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_loan_due_termco1__c</fullName>
        <inlineHelpText>Enter the balance tenure of loan</inlineHelpText>
        <label>other loan due termco1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_loan_due_termco2__c</fullName>
        <label>other loan due termco2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_loan_due_termco3__c</fullName>
        <label>other loan due termco3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_loan_emi1__c</fullName>
        <description>Enter the EMI Amount</description>
        <label>other loan emi1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_emi2__c</fullName>
        <label>other loan emi2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_emi3__c</fullName>
        <label>other loan emi3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_os1__c</fullName>
        <description>Enter the Period of time for Unexpired tenure</description>
        <inlineHelpText>Less than 11 months cant be treated as Loan</inlineHelpText>
        <label>other loan os1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_os2__c</fullName>
        <label>other loan os2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_os3__c</fullName>
        <label>other loan os3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_loan_type1__c</fullName>
        <label>other loan type1</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(TERM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(OD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgaged Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>other_loan_type2__c</fullName>
        <label>other loan type2</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(TERM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(OD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgaged Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>other_loan_type3__c</fullName>
        <label>other loan type3</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(TERM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan(OD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgaged Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>stake__c</fullName>
        <description>Enter the percentage for stake</description>
        <inlineHelpText>Enter the percentage for Stake&quot;Eg:10%,20%&quot;.</inlineHelpText>
        <label>Stake %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>stake_holders__c</fullName>
        <label>stake holders</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>